--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -152,6 +152,8 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Rendering\Handle.h" />
+    <ClInclude Include="Rendering\RenderObject.h" />
     <ClInclude Include="Utils\Logger.h" />
     <ClInclude Include="Rendering\Pipeline.h" />
     <ClInclude Include="Rendering\Mesh.h" />
