--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Lib\assimp\include;$(SolutionDir)Lib\glfw-3.4.bin.WIN64\include;$(SolutionDir)Lib\glad\include;$(SolutionDir)Lib\glm-1.0.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Lib\assimp\include;$(SolutionDir)Lib\glfw-3.4.bin.WIN64\include;$(SolutionDir)Lib\glad\include;$(SolutionDir)Lib\glm-1.0.1;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <LanguageStandard>stdcpp20</LanguageStandard>
@@ -131,7 +131,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Lib\assimp\include;$(SolutionDir)Lib\glfw-3.4.bin.WIN64\include;$(SolutionDir)Lib\glad\include;$(SolutionDir)Lib\glm-1.0.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Lib\assimp\include;$(SolutionDir)Lib\glfw-3.4.bin.WIN64\include;$(SolutionDir)Lib\glad\include;$(SolutionDir)Lib\glm-1.0.1;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
